try globe widget

--- a/index.html
+++ b/index.html
@@ -216,9 +216,11 @@
       <span style="margin: 0; font-size: 15px;">&copy; Copyright 2020 Soumya Sanyal.</span>
       <a href="https://clustrmaps.com/site/1b0vz" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=080808&w=70&t=tt&d=6iWI-Jg4qmU9aQU4XltCNlvxMu5vNaiFBbeH1lVJMcU&co=ffffff&ct=808080" /></a>
 
+
     </div>
 
 
+    <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=6iWI-Jg4qmU9aQU4XltCNlvxMu5vNaiFBbeH1lVJMcU"></script>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
