try hack of color

--- a/index.html
+++ b/index.html
@@ -214,13 +214,12 @@
 
 
       <span style="margin: 0; font-size: 15px;">&copy; Copyright 2020 Soumya Sanyal.</span>
-      <!-- <a href="https://clustrmaps.com/site/1b0vz" title="Visit tracker"><img src="//clustrmaps.com/map_v2.png?cl=080808&w=70&t=tt&d=6iWI-Jg4qmU9aQU4XltCNlvxMu5vNaiFBbeH1lVJMcU&co=ffffff&ct=808080" /></a> -->
+      <a href='https://clustrmaps.com/site/1b0vz'  title='Visit tracker'><img src='//clustrmaps.com/map_v2.png?cl=080808&w=70&t=n&d=6iWI-Jg4qmU9aQU4XltCNlvxMu5vNaiFBbeH1lVJMcU&co=fffff7&ct=808080'/></a>
 
 
     </div>
 
 
-    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=fffff7&w=80&t=n&d=6iWI-Jg4qmU9aQU4XltCNlvxMu5vNaiFBbeH1lVJMcU&co=fffff7&ct=fffff7&cmo=fffff7&cmn=fffff7'></script>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
