--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
                 <div class="fixed-posi">
                 <p class="name">Soumya Sanyal</p>
                 <img lsrc="images/profile.jpg" class="profilepic mt-3 mb-2 rounded">
-                <div class="pt-5 menur"><a class="menulink" target="_blank" href="assets/cv.pdf">Curriculum Vitae</a></div>
-                <div class=""><a class="menulink" target="_blank" href="https://scholar.google.com/citations?user=KvaizyQAAAAJ&hl=en">Google Scholar</a></div>
-                <div class=""><a class="menulink" target="_blank" href="https://www.semanticscholar.org/author/Soumya-Sanyal/3313909">Semantic Scholar</a></div>
-                <div class=""><a class="menulink" target="_blank" href="https://dblp.org/pid/86/1950-1.html">DBLP</a></div>
+                <div class="pt-5 menur"><a class="menulink" target="_blank" href="assets/cv.pdf">CV</a></div>
                 <div class=""><a class="menulink" target="_blank" href="mailto:soumyasa@usc.edu">Email</a></div>
+                <div class=""><a class="menulink" target="_blank" href="https://twitter.com/ssanyal8">Twitter</a></div>
                 <div class=""><a class="menulink" target="_blank" href="https://github.com/soumyasanyal">Github</a></div>
                 <div class=""><a class="menulink" target="_blank" href="https://www.linkedin.com/in/soumyasanyal/">LinkedIn</a></div>
-                <div class=""><a class="menulink" target="_blank" href="https://twitter.com/ssanyal8">Twitter</a></div>
+                <div class=""><a class="menulink" target="_blank" href="https://dblp.org/pid/86/1950-1.html">DBLP</a></div>
+                <div class=""><a class="menulink" target="_blank" href="https://scholar.google.com/citations?user=KvaizyQAAAAJ&hl=en">Google Scholar</a></div>
+                <div class=""><a class="menulink" target="_blank" href="https://www.semanticscholar.org/author/Soumya-Sanyal/3313909">Semantic Scholar</a></div>
                 </div>
             </div>
 
