--- a/index.html
+++ b/index.html
@@ -61,12 +61,9 @@
                 <img lsrc="images/profile.jpg" class="profilepic mt-3 mb-2 rounded">
                 <div class="pt-5 menur"><a class="menulink" target="_blank" href="assets/cv.pdf">CV</a></div>
                 <div class=""><a class="menulink" target="_blank" href="mailto:soumyasa@usc.edu">Email</a></div>
-                <div class=""><a class="menulink" target="_blank" href="https://twitter.com/ssanyal8">Twitter</a></div>
                 <div class=""><a class="menulink" target="_blank" href="https://github.com/soumyasanyal">Github</a></div>
+                <div class=""><a class="menulink" target="_blank" href="https://twitter.com/ssanyal8">Twitter</a></div>
                 <div class=""><a class="menulink" target="_blank" href="https://www.linkedin.com/in/soumyasanyal/">LinkedIn</a></div>
-                <div class=""><a class="menulink" target="_blank" href="https://dblp.org/pid/86/1950-1.html">DBLP</a></div>
-                <div class=""><a class="menulink" target="_blank" href="https://scholar.google.com/citations?user=KvaizyQAAAAJ&hl=en">Google Scholar</a></div>
-                <div class=""><a class="menulink" target="_blank" href="https://www.semanticscholar.org/author/Soumya-Sanyal/3313909">Semantic Scholar</a></div>
                 </div>
             </div>
 
@@ -87,6 +84,10 @@
 
 
                 <p class="header pt-5">Publications</p>
+                <a class="menulink" target="_blank" href="https://scholar.google.com/citations?user=KvaizyQAAAAJ&hl=en">Google Scholar</a><span class="tagsep">|</span>
+                <a class="menulink" target="_blank" href="https://www.semanticscholar.org/author/Soumya-Sanyal/3313909">Semantic Scholar</a><span class="tagsep">|</span>
+                <a class="menulink" target="_blank" href="https://dblp.org/pid/86/1950-1.html">DBLP</a>
+
 
                  <div class="pt-2">
                      <h5>Preprints</h5>
