--- a/index.html
+++ b/index.html
@@ -89,25 +89,20 @@
                 <a class="menulink" target="_blank" href="https://dblp.org/pid/86/1950-1.html">DBLP</a>
 
 
-                 <div class="pt-2">
-                     <h5>Preprints</h5>
-                 </div>
+                <div class="pt-2">
+                    <h5>Conference Publications</h5>
+                </div>
                 <div class="row">
-                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/proteingcn.png"> </div>
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/dig.png"> </div>
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
-                            <span class="papertitle">ProteinGCN: Protein model quality assessment using Graph Convolutional Networks</span></br>
-                            <span class="thisauthor">Soumya Sanyal</span>, Ivan Anishchenko, Anirudh Dagar, David Baker, and Partha Talukdar
-                            <a class="tag" target="_blank" href="https://www.biorxiv.org/content/10.1101/2020.04.06.028266v1">Paper</a><span class="tagsep">|</span>
-                            <a class="tag" target="_blank" href="https://github.com/malllabiisc/ProteinGCN">Code</a>
+                            <span class="papertitle">Discretized Integrated Gradients for Explaining Language Models</span></br>
+                            <span class="thisauthor">Soumya Sanyal</span>*, Xiang Ren
+                            <span class="conf"><a class="confshort" href="https://2021.emnlp.org/">EMNLP 2021</a> | The 2021 Conference on Empirical Methods in Natural Language Processing</span></br>
+                            <a class="tag" target="_blank" href="https://arxiv.org/abs/2108.13654">Paper</a><span class="tagsep">|</span>
+                            <a class="tag" target="_blank" href="https://github.com/INK-USC/DIG">Code</a>
                         </p>
                     </div>
-                </div>
-
-
-
-                <div class="pt-2">
-                    <h5>Published</h5>
                 </div>
                 <div class="row">
                     <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/reevaluation.png"> </div>
@@ -158,19 +153,59 @@
                         </p>
                     </div>
                 </div>
+
+
+                <div class="pt-2">
+                    <h5>Workshop Publications</h5>
+                </div>
+                <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/salkg.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">SalKG: Learning From Knowledge Graph Explanations for Commonsense Reasoning</span></br>
+                            Aaron Chan, Boyuan Long, Jiashu Xu, <span class="thisauthor">Soumya Sanyal</span>, Tanishq Gupta, and Xiang Ren
+                            <span class="conf"><a class="confshort" href="https://icml2021-xai.github.io/">ICML Workshop</a> | ICML 2021 Workshop on Theoretic Foundation, Criticism, and Application Trend of Explainable AI</span></br>
+                            <a class="tag" target="_blank" href="https://arxiv.org/abs/2104.08793">Paper</a><span
+                                class="tagsep">|</span>
+                            <a class="tag" target="_blank" href="">Code</a>
+                        </p>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/mtcgcnn.png"> </div>
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
-                            <span class="papertitle">MT-CGCNN: Integrating Crystal Graph Convolutional Neural Network with Multitask Learning for Material Property Prediction</span></br>
-                            <span class="thisauthor">Soumya Sanyal</span>, Janakiraman Balachandran, Naganand Yadati, Abhishek Kumar, Padmini Rajagopalan, Suchismita Sanyal, and Partha Talukdar
-                            <span class="conf"><a class="confshort" href="http://www.quantum-machine.org/workshops/nips2018/">NeurIPS Workshop</a> | NeurIPS 2018 Workshop on Machine Learning for Molecules and Materials</span></br>
-                            <a class="tag" target="_blank" href="https://arxiv.org/abs/1811.05660">Paper</a><span class="tagsep">|</span>
+                            <span class="papertitle">MT-CGCNN: Integrating Crystal Graph Convolutional Neural Network with Multitask
+                                Learning for Material Property Prediction</span></br>
+                            <span class="thisauthor">Soumya Sanyal</span>, Janakiraman Balachandran, Naganand Yadati, Abhishek Kumar,
+                            Padmini Rajagopalan, Suchismita Sanyal, and Partha Talukdar
+                            <span class="conf"><a class="confshort" href="http://www.quantum-machine.org/workshops/nips2018/">NeurIPS
+                                    Workshop</a> | NeurIPS 2018 Workshop on Machine Learning for Molecules and Materials</span></br>
+                            <a class="tag" target="_blank" href="https://arxiv.org/abs/1811.05660">Paper</a><span
+                                class="tagsep">|</span>
                             <a class="tag" target="_blank" href="https://github.com/soumyasanyal/mt-cgcnn">Code</a>
                         </p>
                     </div>
                 </div>
 
+                <div class="pt-2">
+                    <h5>Preprints</h5>
+                </div>
+                <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/proteingcn.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">ProteinGCN: Protein model quality assessment using Graph Convolutional
+                                Networks</span></br>
+                            <span class="thisauthor">Soumya Sanyal</span>, Ivan Anishchenko, Anirudh Dagar, David Baker, and Partha
+                            Talukdar
+                            <a class="tag" target="_blank"
+                                href="https://www.biorxiv.org/content/10.1101/2020.04.06.028266v1">Paper</a><span
+                                class="tagsep">|</span>
+                            <a class="tag" target="_blank" href="https://github.com/malllabiisc/ProteinGCN">Code</a>
+                        </p>
+                    </div>
+                </div>
 
 
 
