--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
                 <p class="header pt-5">Research</p>
-                I am broadly interested in Natural Language Processing and Deep Learning on Graphs. My recent research has focused on learning and inference over graphs, knowledge graph completion, and representation learning of molecules and materials.
+                I am broadly interested in Natural Language Processing and Deep Learning on Graphs. My recent research has focused on explanation-based learning and learning to reason with language models.
                 <br>
                 <br>
 
