--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 
 
                 <p class="header pt-5">Research</p>
-                I am broadly interested in Natural Language Processing and Deep Learning on Graphs. My recent research has focused on explanation-based learning and learning to reason with language models.
+                I am broadly interested in Natural Language Processing and Deep Learning on Graphs. My recent research has focused on learning to reason using language models and explanation-based learning.
                 <br>
                 <br>
 
@@ -93,6 +93,19 @@
                     <h5>Conference Publications</h5>
                 </div>
                 <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/fairr.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">FaiRR: Faithful and Robust Deductive Reasoning over Natural Language</span></br>
+                            <span class="thisauthor">Soumya Sanyal</span>*, Harman Singh, Xiang Ren
+                            <span class="conf"><a class="confshort" href="https://www.2022.aclweb.org/">ACL 2022</a> | 60th Annual Meeting of the Association for Computational Linguistics</span></br>
+                            <a class="tag" target="_blank" href="https://arxiv.org/abs/2203.10261">Paper</a><span
+                                class="tagsep">|</span>
+                            <a class="tag" target="_blank" href="https://github.com/INK-USC/FaiRR">Code</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/dig.png"> </div>
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
@@ -101,6 +114,21 @@
                             <span class="conf"><a class="confshort" href="https://2021.emnlp.org/">EMNLP 2021</a> | The 2021 Conference on Empirical Methods in Natural Language Processing</span></br>
                             <a class="tag" target="_blank" href="https://arxiv.org/abs/2108.13654">Paper</a><span class="tagsep">|</span>
                             <a class="tag" target="_blank" href="https://github.com/INK-USC/DIG">Code</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/salkg.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">SalKG: Learning From Knowledge Graph Explanations for Commonsense
+                                Reasoning</span></br>
+                            Aaron Chan, Boyuan Long, Jiashu Xu, <span class="thisauthor">Soumya Sanyal</span>, Tanishq Gupta, and Xiang
+                            Ren
+                            <span class="conf"><a class="confshort" href="https://neurips.cc/Conferences/2021">Neurips 2021</a> | Thirty-fifth Conference on Neural Information Processing Systems</span></br>
+                            <a class="tag" target="_blank" href="https://proceedings.neurips.cc/paper/2021/hash/9752d873fa71c19dc602bf2a0696f9b5-Abstract.html">Paper</a><span
+                                class="tagsep">|</span>
+                            <a class="tag" target="_blank" href="https://github.com/INK-USC/SalKG">Code</a>
                         </p>
                     </div>
                 </div>
