Update arxiv paper

--- a/index.html
+++ b/index.html
@@ -233,6 +233,17 @@
                             <a class="tag" target="_blank" href="https://github.com/malllabiisc/ProteinGCN">Code</a>
                         </p>
                     </div>
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/robustlr.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">RobustLR: Evaluating Robustness to Logical Perturbation in Deductive Reasoning</span></br>
+                            <span class="thisauthor">Soumya Sanyal</span>, Zeyi Liao, Xiang Ren</br>
+                            <a class="tag" target="_blank"
+                                href="assets/robustlr.pdf">Paper</a><span
+                                class="tagsep">|</span>
+                            <a class="tag" target="_blank" href="#">Code</a>
+                        </p>
+                    </div>
                 </div>
 
 
