--- a/index.html
+++ b/index.html
@@ -92,6 +92,18 @@
                 <div class="pt-2">
                     <h5>Conference Publications</h5>
                 </div>
+
+                <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/robustlr.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">RobustLR: Evaluating Robustness to Logical Perturbation in Deductive Reasoning</span></br>
+                            <span class="thisauthor">Soumya Sanyal</span>, Zeyi Liao, Xiang Ren</br>
+                            <a class="tag" target="_blank" href="https://arxiv.org/abs/2205.12598">Paper</a><span class="tagsep">|</span>
+                            <a class="tag" target="_blank" href="https://github.com/INK-USC/RobustLR">Code</a>
+                        </p>
+                    </div>
+                </div>
                 <div class="row">
                     <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/fairr.png"> </div>
                     <div class="col-lg-10">
@@ -233,7 +245,7 @@
                             <a class="tag" target="_blank" href="https://github.com/malllabiisc/ProteinGCN">Code</a>
                         </p>
                     </div>
-                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/robustlr.png"> </div>
+                    <!-- <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/robustlr.png"> </div>
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
                             <span class="papertitle">RobustLR: Evaluating Robustness to Logical Perturbation in Deductive Reasoning</span></br>
@@ -243,7 +255,7 @@
                                 class="tagsep">|</span>
                             <a class="tag" target="_blank" href="#">Code</a>
                         </p>
-                    </div>
+                    </div> -->
                 </div>
 
 
@@ -262,7 +274,7 @@
  -->
                 <p class="header pt-5">Service</p>
                 <div class="pb-1">
-                    <b>Reviewer:</b> &nbsp; AAAI 2021, NAACL 2021, DMKD <br>
+                    <b>Reviewer:</b> &nbsp; AAAI 2021, NAACL 2021, DMKD, EMNLP 2021, ACL 2022, NeurIPS 2022, EMNLP 2022 <br>
                     <b>Sub-Reviewer:</b> &nbsp; EMNLP 2020, WWW 2020, ICML 2021, KDD 2021, TACL
                 </div>
 
