--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
                             <span class="papertitle">FaiRR: Faithful and Robust Deductive Reasoning over Natural Language</span></br>
-                            <span class="thisauthor">Soumya Sanyal</span>*, Harman Singh, Xiang Ren
+                            <span class="thisauthor">Soumya Sanyal</span>, Harman Singh, Xiang Ren
                             <span class="conf"><a class="confshort" href="https://www.2022.aclweb.org/">ACL 2022</a> | 60th Annual Meeting of the Association for Computational Linguistics</span></br>
                             <a class="tag" target="_blank" href="https://arxiv.org/abs/2203.10261">Paper</a><span
                                 class="tagsep">|</span>
@@ -122,7 +122,7 @@
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
                             <span class="papertitle">Discretized Integrated Gradients for Explaining Language Models</span></br>
-                            <span class="thisauthor">Soumya Sanyal</span>*, Xiang Ren
+                            <span class="thisauthor">Soumya Sanyal</span>, Xiang Ren
                             <span class="conf"><a class="confshort" href="https://2021.emnlp.org/">EMNLP 2021</a> | The 2021 Conference on Empirical Methods in Natural Language Processing</span></br>
                             <a class="tag" target="_blank" href="https://arxiv.org/abs/2108.13654">Paper</a><span class="tagsep">|</span>
                             <a class="tag" target="_blank" href="https://github.com/INK-USC/DIG">Code</a>
@@ -274,7 +274,7 @@
  -->
                 <p class="header pt-5">Service</p>
                 <div class="pb-1">
-                    <b>Reviewer:</b> &nbsp; AAAI 2021, NAACL 2021, DMKD, EMNLP 2021, ACL 2022, NeurIPS 2022, EMNLP 2022 <br>
+                    <b>Reviewer:</b> &nbsp; AAAI 2021, NAACL 2021, DMKD, EMNLP 2021, ICLR 2022, ACL 2022, NeurIPS 2022, EMNLP 2022 <br>
                     <b>Sub-Reviewer:</b> &nbsp; EMNLP 2020, WWW 2020, ICML 2021, KDD 2021, TACL
                 </div>
 
