--- a/index.html
+++ b/index.html
@@ -232,6 +232,18 @@
                     <h5>Preprints</h5>
                 </div>
                 <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/apollo.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">APOLLO: A Simple Approach for Adaptive Pretraining of Language Models for Logical Reasoning</span></br>
+                            <span class="thisauthor">Soumya Sanyal</span>, Yichong Xu, Shuohang Wang, Ziyi Yang, Reid Pryzant, Wenhao Yu, Chenguang Zhu, Xiang Ren</br>
+                            <a class="tag" target="_blank"
+                                href="https://arxiv.org/abs/2212.09282">Paper</a><span
+                                class="tagsep">|</span>
+                            <a class="tag" target="_blank" href="#">Code</a>
+                        </p>
+                    </div>
+
                     <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/proteingcn.png"> </div>
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
@@ -245,17 +257,7 @@
                             <a class="tag" target="_blank" href="https://github.com/malllabiisc/ProteinGCN">Code</a>
                         </p>
                     </div>
-                    <!-- <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/robustlr.png"> </div>
-                    <div class="col-lg-10">
-                        <p class="paper my-2 pl-2">
-                            <span class="papertitle">RobustLR: Evaluating Robustness to Logical Perturbation in Deductive Reasoning</span></br>
-                            <span class="thisauthor">Soumya Sanyal</span>, Zeyi Liao, Xiang Ren</br>
-                            <a class="tag" target="_blank"
-                                href="assets/robustlr.pdf">Paper</a><span
-                                class="tagsep">|</span>
-                            <a class="tag" target="_blank" href="#">Code</a>
-                        </p>
-                    </div> -->
+
                 </div>
 
 
