--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
                         <p class="paper my-2 pl-2">
                             <span class="papertitle">RobustLR: Evaluating Robustness to Logical Perturbation in Deductive Reasoning</span></br>
                             <span class="thisauthor">Soumya Sanyal</span>, Zeyi Liao, Xiang Ren</br>
+                            <span class="conf"><a class="confshort" href="https://2022.emnlp.org//">EMNLP 2022</a> |The 2022 Conference on Empirical Methods in Natural Language Processing</span></br>
                             <a class="tag" target="_blank" href="https://arxiv.org/abs/2205.12598">Paper</a><span class="tagsep">|</span>
                             <a class="tag" target="_blank" href="https://github.com/INK-USC/RobustLR">Code</a>
                         </p>
