--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             </div>
 
             <div class="col-md-8 pt-5 about">
-                I am a Ph.D. student at the <a class="in-text" href="https://inklab.usc.edu/"target="_blank">INK Lab</a>, University of Southern California, working with Prof. <a class="in-text" href="http://ink-ron.usc.edu/xiangren/"target="_blank">Xiang Ren</a>. Previously, I was a research assistant at the <a class="in-text" href="http://malllabiisc.github.io/"target="_blank">MALL Lab</a>, Indian Institue of Science hosted by <a class="in-text" href="http://talukdar.net/"target="_blank">Prof. Partha Talukdar</a>. Before IISc, I was a Senior Analyst at the Equities Risk Management team of Goldman Sachs, India. I completed my Bachelor's from the Indian Institute of Technology, Kharagpur in 2016.
+                I am a Ph.D. Candidate at the <a class="in-text" href="https://inklab.usc.edu/"target="_blank">INK Lab</a>, University of Southern California, working with Prof. <a class="in-text" href="http://ink-ron.usc.edu/xiangren/"target="_blank">Xiang Ren</a>. Previously, I was a research assistant at the <a class="in-text" href="http://malllabiisc.github.io/"target="_blank">MALL Lab</a>, Indian Institue of Science hosted by <a class="in-text" href="http://talukdar.net/"target="_blank">Prof. Partha Talukdar</a>. Before IISc, I was a Senior Analyst at the Equities Risk Management team of Goldman Sachs, India. I completed my Bachelor's from the Indian Institute of Technology, Kharagpur in 2016.
 
 
 
