--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <br>
                 <br>
 
-                If you want to discuss more about my work, feel free to contact me at <a class="in-text" href="mailto:soumyasa@usc.edu">soumyasa [at] usc [dot] edu</a>.
+                If you want to discuss more about my work, or collaborate, feel free to contact me at <a class="in-text" href="mailto:soumyasa@usc.edu">soumyasa [at] usc [dot] edu</a>.
 
 
 
