--- a/index.html
+++ b/index.html
@@ -94,6 +94,41 @@
                 </div>
 
                 <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/faith.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">Faith and Fate: Limits of Transformers on Compositionality</span></br>
+                            Nouha Dziri, Ximing Lu, Melanie Sclar, Xiang Lorraine Li, Liwei Jian, Bill Yuchen Lin, Peter West, Chandra Bhagavatula,
+                            Ronan Le Bras, Jena D Hwang, <span class="thisauthor">Soumya Sanyal</span>, Sean Welleck, Xiang Ren, Allyson Ettinger, Zaid Harchaoui, Yejin Choi</br>
+                            <span class="conf"><a class="confshort" href="https://nips.cc/">NeurIPS 2023</a> |Thirty-seventh Conference on Neural Information Processing Systems</span></br>
+                            <a class="tag" target="_blank" href="https://arxiv.org/abs/2305.18654">Paper</a><span class="tagsep"></span>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/apollo.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">APOLLO: A Simple Approach for Adaptive Pretraining of Language Models for Logical Reasoning</span></br>
+                            <span class="thisauthor">Soumya Sanyal</span>, Yichong Xu, Shuohang Wang, Ziyi Yang, Reid Pryzant, Wenhao Yu, Chenguang
+                            Zhu, Xiang Ren</br>
+                            <span class="conf"><a class="confshort" href="https://2023.aclweb.org/">ACL 2023</a> |The 61st Annual Meeting of the Association for Computational Linguistics</span></br>
+                            <a class="tag" target="_blank" href="https://aclanthology.org/2023.acl-long.347/">Paper</a><span class="tagsep"></span>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/genread.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">Generate rather than Retrieve: Large Language Models are Strong Context Generators</span></br>
+                            Wenhao Yu, Dan Iter, Shuohang Wang, Yichong Xu, Mingxuan Ju, <span class="thisauthor">Soumya Sanyal</span>, Chenguang Zhu, Michael Zeng, Meng Jiang</br>
+                            <span class="conf"><a class="confshort" href="https://iclr.cc/Conferences/2023">ICLR 2023</a> |The Eleventh International Conference on Learning Representations</span></br>
+                            <a class="tag" target="_blank" href="https://openreview.net/pdf?id=fB0hRu9GZUS">Paper</a><span class="tagsep"></span>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/robustlr.png"> </div>
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
@@ -233,17 +268,6 @@
                     <h5>Preprints</h5>
                 </div>
                 <div class="row">
-                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/apollo.png"> </div>
-                    <div class="col-lg-10">
-                        <p class="paper my-2 pl-2">
-                            <span class="papertitle">APOLLO: A Simple Approach for Adaptive Pretraining of Language Models for Logical Reasoning</span></br>
-                            <span class="thisauthor">Soumya Sanyal</span>, Yichong Xu, Shuohang Wang, Ziyi Yang, Reid Pryzant, Wenhao Yu, Chenguang Zhu, Xiang Ren</br>
-                            <a class="tag" target="_blank"
-                                href="https://arxiv.org/abs/2212.09282">Paper</a><span
-                                class="tagsep">|</span>
-                            <a class="tag" target="_blank" href="#">Code</a>
-                        </p>
-                    </div>
 
                     <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/proteingcn.png"> </div>
                     <div class="col-lg-10">
@@ -275,9 +299,16 @@
                      </p>
                  </div>
  -->
+                <p class="header pt-5">Teaching Experience</p>
+                <div class="pb-1">
+                    <li>
+                        <item><b>Fall 2023: TA for Introduction to Machine Learning (CSCI 467)</b></item>
+                    </li>
+                </div>
+
                 <p class="header pt-5">Service</p>
                 <div class="pb-1">
-                    <b>Reviewer:</b> &nbsp; AAAI 2021, NAACL 2021, DMKD, EMNLP 2021, ICLR 2022, ACL 2022, NeurIPS 2022, EMNLP 2022 <br>
+                    <b>Reviewer:</b> &nbsp; AAAI 2021, NAACL 2021, DMKD, EMNLP 2021, ICLR 2022, ACL 2022, NeurIPS 2022, EMNLP 2022, ACL 2023, NeurIPS 2023, NEJLT <br>
                     <b>Sub-Reviewer:</b> &nbsp; EMNLP 2020, WWW 2020, ICML 2021, KDD 2021, TACL
                 </div>
 
@@ -386,8 +417,8 @@
       }
 
       .thisauthor {
-           /*color: #111;*/
-          /*text-decoration: underline dotted;*/
+           color: #111;
+          /* text-decoration: underline dotted; */
           font-weight: bold;
       }
       .noter {
