--- a/index.html
+++ b/index.html
@@ -94,6 +94,29 @@
                 </div>
 
                 <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/entver.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">Are Machines Better at Complex Reasoning? Unveiling Human-Machine
+Inference Gaps in Entailment Verification</span></br>
+                            <span class="thisauthor">Soumya Sanyal</span>, Tianyi Xiao, Jiacheng Liu, Wenya Wang, Xiang Ren</br>
+                            <span class="conf"><a class="confshort" href="https://2024.aclweb.org/">ACL 2204 Findings</a> |Findings of the Association for Computational Linguistics ACL 2024</span></br>
+                            <a class="tag" target="_blank" href="https://aclanthology.org/2024.findings-acl.618/">Paper</a><span class="tagsep"></span>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/plasma.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">PLASMA: Procedural Knowledge Models for Language-based Planning and Re-planning</span></br>
+                            Faeze Brahman, Chandra Bhagavatula, Valentina Pyatkin, Jena D. Hwang, Xiang Lorraine Li, Hirona J. Arai, <span class="thisauthor">Soumya Sanyal</span>, Keisuke Sakaguchi, Xiang Ren, Yejin Choi</br>
+                            <span class="conf"><a class="confshort" href="https://iclr.cc/Conferences/2024">ICLR 2024</a> |The Twelfth International Conference on Learning Representations</span></br>
+                            <a class="tag" target="_blank" href="https://openreview.net/pdf?id=dFcXJgnrGB">Paper</a><span class="tagsep"></span>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
                     <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/faith.png"> </div>
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
@@ -232,8 +255,39 @@
 
 
                 <div class="pt-2">
+                    <h5>Preprints</h5>
+                </div>
+
+                <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/score.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">Self-Contradictory Reasoning Evaluation and Detection</span></br>
+                            Ziyi Liu, <span class="thisauthor">Soumya Sanyal</span>, Isabelle Lee, Yongkang Du, Jieyu Zhao</br>
+                            <a class="tag" target="_blank" href="https://arxiv.org/abs/2311.09603">Paper</a>
+                        </p>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/proteingcn.png"> </div>
+                    <div class="col-lg-10">
+                        <p class="paper my-2 pl-2">
+                            <span class="papertitle">ProteinGCN: Protein model quality assessment using Graph Convolutional
+                                Networks</span></br>
+                            <span class="thisauthor">Soumya Sanyal</span>, Ivan Anishchenko, Anirudh Dagar, David Baker, and Partha
+                            Talukdar
+                            <a class="tag" target="_blank" href="https://www.biorxiv.org/content/10.1101/2020.04.06.028266v1">Paper</a>
+                            <span class="tagsep">|</span>
+                            <a class="tag" target="_blank" href="https://github.com/malllabiisc/ProteinGCN">Code</a>
+                        </p>
+                    </div>
+                </div>
+
+
+                <div class="pt-2">
                     <h5>Workshop Publications</h5>
                 </div>
+
                 <div class="row">
                     <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/salkg.png"> </div>
                     <div class="col-lg-10">
@@ -264,70 +318,20 @@
                     </div>
                 </div>
 
-                <div class="pt-2">
-                    <h5>Preprints</h5>
-                </div>
-                <div class="row">
 
-                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/proteingcn.png"> </div>
-                    <div class="col-lg-10">
-                        <p class="paper my-2 pl-2">
-                            <span class="papertitle">ProteinGCN: Protein model quality assessment using Graph Convolutional
-                                Networks</span></br>
-                            <span class="thisauthor">Soumya Sanyal</span>, Ivan Anishchenko, Anirudh Dagar, David Baker, and Partha
-                            Talukdar
-                            <a class="tag" target="_blank"
-                                href="https://www.biorxiv.org/content/10.1101/2020.04.06.028266v1">Paper</a><span
-                                class="tagsep">|</span>
-                            <a class="tag" target="_blank" href="https://github.com/malllabiisc/ProteinGCN">Code</a>
-                        </p>
-                    </div>
-
-                </div>
-
-
-
-<!--                  <p class="header pt-5">Talks</p>
-                 <div class="pb-1">
-                     <p class="paper my-2 pl-2">
-                         <span class="papertitle">Repeatable Data Setup for Repeatable Science</span><br>
-                         Talked about DataDepsGenerators.jl and Reproducible AI.<br>
-                         <span class="conf">PyData 2018, 11 Times Square, New York City, United States</span><br>
-                         <a class="tag" href="https://www.youtube.com/watch?v=eMtuzjn_Xks" target="_blank">video</a><span class="tagsep">|</span>
-                         <a class="tag" href="https://pydata.org/nyc2018/schedule/presentation/14/"
-                             target="_blank">abstract</a>
-                     </p>
-                 </div>
- -->
                 <p class="header pt-5">Teaching Experience</p>
                 <div class="pb-1">
                     <li>
                         <item><b>Fall 2023: TA for Introduction to Machine Learning (CSCI 467)</b></item>
+                        <item><b>Spring 2024: TA for Introduction to Machine Learning (CSCI 467)</b></item>
                     </li>
                 </div>
 
                 <p class="header pt-5">Service</p>
                 <div class="pb-1">
-                    <b>Reviewer:</b> &nbsp; AAAI 2021, NAACL 2021, DMKD, EMNLP 2021, ICLR 2022, ACL 2022, NeurIPS 2022, EMNLP 2022, ACL 2023, NeurIPS 2023, NEJLT <br>
+                    <b>Reviewer:</b> &nbsp; AAAI 2021, NAACL 2021, DMKD, EMNLP 2021, ICLR 2022, ACL 2022, NeurIPS 2022, EMNLP 2022, ACL 2023, NeurIPS 2023, NEJLT, ARR 2024 <br>
                     <b>Sub-Reviewer:</b> &nbsp; EMNLP 2020, WWW 2020, ICML 2021, KDD 2021, TACL
                 </div>
-
-<!--
-                <div class="row text-center py-4">
-                    <div class="mx-auto mt-2">
-                        <img class="img-fluid instilogo p-1" lsrc="images/iisc.png">
-                        <div class="institution">IISc Bangalore</div>
-                        <div class="years">2018-2020</div>
-                    </div>
-                </div> -->
-<!--                 <div class="py-2">
-                    <small>
-                  This page has been accessed at least
-                  <a href="http://stuff.mit.edu/doc/counter-howto.html"><img
-                          src="http://stuff.mit.edu/cgi/counter/sebansanty" alt="several"></a>
-                    times since 16th August 2020.
-                    </small>
-                </div> -->
 
             </div>
 
