--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@ Inference Gaps in Entailment Verification</span></br>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/proteingcn.png"> </div>
+                    <div class="col-lg-2 my-auto"> <img class="sideimg" lsrc="images/sides/proteingcn2.png"> </div>
                     <div class="col-lg-10">
                         <p class="paper my-2 pl-2">
                             <span class="papertitle">ProteinGCN: Protein model quality assessment using Graph Convolutional
@@ -321,10 +321,8 @@ Inference Gaps in Entailment Verification</span></br>
 
                 <p class="header pt-5">Teaching Experience</p>
                 <div class="pb-1">
-                    <li>
-                        <item><b>Fall 2023: TA for Introduction to Machine Learning (CSCI 467)</b></item>
-                        <item><b>Spring 2024: TA for Introduction to Machine Learning (CSCI 467)</b></item>
-                    </li>
+                    <li><b>Fall 2023: TA for Introduction to Machine Learning (CSCI 467)</b></li>
+                    <li><b>Spring 2024: TA for Introduction to Machine Learning (CSCI 467)</b></li>
                 </div>
 
                 <p class="header pt-5">Service</p>
